<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <Button

        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="122dp"
        android:background="@drawable/button_reg"
        android:text="@string/reg"
        android:textColor="#040404"
        app:backgroundTint="@color/white"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/editTextTextPersonNameU"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonNameP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonNameP"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="@string/pass_word"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonNameU" />


    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="57dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Gender"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonNameP"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonNameP" />

    <RadioGroup
        android:id="@+id/Gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/vehicle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress">

        <RadioButton
            android:id="@+id/Male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/male"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/Female"
            app:layout_constraintEnd_toStartOf="@+id/Female"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/Female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/female"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/vehicle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Gender">

        <RadioButton
            android:id="@+id/Bike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/car"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/Car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/bike"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </RadioGroup>

    <Spinner

        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="54dp"
        android:autofillHints="@string/country"
        android:background="@color/white"
        android:dropDownWidth="match_parent"
        android:gravity="center"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicle" />


</androidx.constraintlayout.widget.ConstraintLayout>